# syslog-ng-3.4

./: configure.in
b/: Makefile  config.h  config.status  libtool  syslog-ng.pc  syslog-ng.spec
b/contrib/: Makefile
b/debian/: Makefile
b/doc/: Makefile
b/lib/: Makefile  libsyslog-ng-crypto.la  libsyslog-ng.la  libsyslog_ng_crypto_la-crypto.lo  libsyslog_ng_crypto_la-tlscontext.lo  libsyslog_ng_crypto_la-tlstransport.lo  libsyslog_ng_crypto_la-uuid.lo  libsyslog_ng_la-afinter.lo  libsyslog_ng_la-alarms.lo  libsyslog_ng_la-apphook.lo  libsyslog_ng_la-block-ref-grammar.lo  libsyslog_ng_la-block-ref-parser.lo  libsyslog_ng_la-cfg-args.lo  libsyslog_ng_la-cfg-grammar.lo  libsyslog_ng_la-cfg-lex.lo  libsyslog_ng_la-cfg-lexer-subst.lo  libsyslog_ng_la-cfg-lexer.lo  libsyslog_ng_la-cfg-parser.lo  libsyslog_ng_la-cfg-tree.lo  (+63 more)
lib/: block-ref-grammar.c  block-ref-grammar.h  block-ref-grammar.y  cfg-grammar.c  cfg-grammar.h  cfg-lex.c  cfg-lex.h  filter-expr-grammar.c  filter-expr-grammar.h  filter-expr-grammar.y  parser-expr-grammar.c  parser-expr-grammar.h  parser-expr-grammar.y  pragma-grammar.c  pragma-grammar.h  pragma-grammar.y  rewrite-expr-grammar.c  rewrite-expr-grammar.h  rewrite-expr-grammar.y
modules/: Makefile.am
modules/afmysql/: .gitignore  Makefile  Makefile.am  afmysql-grammar.c  afmysql-grammar.h  afmysql-grammar.y  afmysql-grammar.ym  afmysql-parser.c  afmysql-parser.h  afmysql-plugin.c  afmysql.c  afmysql.h  libafsql_la-afmysql-grammar.lo  libafsql_la-afmysql.lo
modules/afmysql/.deps/: libafsql_la-afmysql-grammar.Plo  libafsql_la-afmysql.Plo
(+579 files in other folders)
